add: shadows to elements

--- a/travel/style.css
+++ b/travel/style.css
@@ -484,16 +484,14 @@ input:focus::placeholder {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.step-logo {
-  margin: auto;
-}
-.step-logo-path {
   transition: 0.3s;
 }
-.step-logo-block:hover .step-logo-path {
-  fill: #0D606F;
+.step-logo-block:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
+.step-logo {margin: auto;}
+.step-logo-path {transition: 0.3s;}
+.step-logo-block:hover .step-logo-path {fill: #0D606F;}
 .step-text {
   font-family: 'Aleo', serif;
   font-style: normal;
@@ -633,6 +631,10 @@ input:focus::placeholder {
   align-self: center;
   filter: drop-shadow(0px 4px 4px #0D606F);
   border-radius: 16px;
+  transition: 0.3s;
+}
+.story-photo:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 .story-description {
   display: flex;
