--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -31,15 +31,262 @@ body {
   padding: 20px;
 }
 
+.player {
+  /* height: 480px; */
+  width: 296px;
+  /* background-color: rgba(255, 255, 255, 0.2); */
+  z-index: 10;
+}
+
+.cover-component {
+  padding-bottom: 12px;
+}
+
+.big-cover-container {
+  width: 296px;
+  height: 296px;
+  position: relative;
+  flex-shrink: 0;
+  overflow: hidden;
+  border-radius: 8px;
+  margin-bottom: 8px;
+}
+
+.big-cover-image {
+  width: 100%;
+  height: 100%;
+  opacity: .7;
+}
+
+.cover-info {
+  width: 296px;
+  margin-top: 12px;
+  margin-bottom: 8px;
+  text-align: start;
+  flex-shrink: 0;
+}
+
+.cover-title, .cover-author {
+  font-size: 15px;
+  line-height: 1.4;
+  font-weight: bold;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.cover-author {
+  font-size: 13px;
+  line-height: 1.2;
+  font-weight: normal;
+  margin-top: 2px;
+  opacity: 0.7;
+}
+
+/* .progress-bar-component {
+  width: 296px;
+  height: 100px;
+} */
+
 .player-controls {
+  width: 100%;
+  flex-shrink: 0;
+}
+
+.main-controls {
+  display: flex;
+}
+
+.second-controls {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 12px;
+}
+
+.play-controls {
+  width: 40%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.controls-button {
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  position: relative;
+  opacity: .8;
+}
+
+.play-button {
+  width: 36px;
+  height: 36px;
+}
+
+.play-button svg:last-child {
+  display: none;
+}
+
+.pause svg:first-child {
+  display: none;
+}
+
+.pause svg:last-child {
+  display: block;
+}
+
+.volume-control {
+  width: 60%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.volume-button {
+  width: 30px;
+  height: 30px;
+}
+
+.volume-slider {
+  width: 80px;
+  height: 5px;
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 5px;
+  margin: 0 5px;
+  opacity: .8;
+}
+
+.volume-percentage {
+  width: 75%;
+  height: 100%;
+  background-color: rgb(255, 255, 255);
+  border-radius: inherit;
+}
+
+.playlist-component {
+  overflow: hidden;
+}
+
+.playlist-container {
+  max-height: 360px;
+  overflow-y: scroll;
+  scrollbar-width: thin;
+  scrollbar-color: rgba(255, 255, 255, 0.2) transparent;
+  overflow: hidden;
+  transition: .3s;
+}
+
+.hide-playlist {
+  transform: translateY(-100%);
+}
+
+.item-component {
+  padding: 6px;
+  cursor: pointer;
+}
+
+.item-component:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 6px;
+}
+
+.item-component:hover .icon-container, .item-component:hover .item-playing svg:nth-child(3) {
+  opacity: 1;
+}
+
+.item-component:hover .item-playing svg:nth-child(2) {
+  opacity: 0;
+}
+
+.item-container {
+  position: relative;
+  display: flex;
+}
+
+.item-cover {
+  width: 48px;
+  height: 48px;
+  position: relative;
+  flex-shrink: 0;
+}
+
+.image-cover {
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+}
+
+.icon-container {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background-color: rgba(17, 17, 17, 0.5);
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  opacity: 0;
+  transition: all 0.3s ease 0s;
+}
+
+.item-active, .item-play-icon, .item-playing svg:nth-child(2) {
+  opacity: 1;
+}
+
+.item-playing-icon, .item-pause-icon, .item-playing svg:nth-child(1) {
+  opacity: 0;
+}
+
+.playlist-icon {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 24px;
+  height: 24px;
+  transition: all 0.3s ease 0s;
+}
+
+.item-info {
+  margin-left: 18px;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 100%;
+  text-align: start;
+}
+
+.item-title, .item-author {
+  font-size: 15px;
+  line-height: 1.2;
+  font-weight: bold;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-right: 8px;
+}
+
+.item-author {
+  font-size: 13px;
+  margin-top: 4px;
+  opacity: 0.7;
+  font-weight: normal;
+}
+
+.item-duration {
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ opacity: 0.7;
+}
+
+/* .player-controls {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 120px;
   margin-bottom: 28px;
-}
+} */
 
-.play-list {
+/* .play-list {
   text-align: left;
 }
 
@@ -63,11 +310,11 @@ body {
   left: 0;
   top: 2px;
   font-weight: 900;
-}
+} */
 
-.item-active::before {
+/* .item-active::before {
   color: #C5B358;
-}
+} */
 
 .player-icon,
 .slider-icon,
@@ -85,13 +332,14 @@ body {
   transition: .3s;  
 }
 
-.player-icon:hover,
+.controls-button:hover,
+.volume-slider:hover,
 .slider-icon:hover,
 .change-quote:hover {
   opacity: 1;
 }
 
-.player-icon:active,
+.controls-button:active,
 .slider-icon:active,
 .change-quote:active {
   border: 0;
@@ -99,7 +347,7 @@ body {
   transform: scale(1.1);
 }
 
-.play {
+/* .play {
   width: 40px;
   height: 40px;
   background-size: 40px 40px;
@@ -116,7 +364,7 @@ body {
 
 .play-next {
   background-image: url("../assets/svg/play-next.svg");
-}
+} */
 
 .weather {
   display: flex;
@@ -193,7 +441,7 @@ body {
 }
 
 .slide-prev {
-  left: 20px;
+  left: 340px;
   background-image: url("../assets/svg/slider-prev.svg");
 }
 
@@ -293,3 +541,7 @@ body {
     padding: 5px;
   }
 }
+/* temp */
+/* .main, .footer {
+  display: none;
+} */
