--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -83,10 +83,47 @@ body {
   opacity: 0.7;
 }
 
-/* .progress-bar-component {
-  width: 296px;
-  height: 100px;
-} */
+.progress-bar-component {
+  width: 100%;
+  height: 26px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-bottom: 7px;
+  margin-top: 6px;
+  cursor: pointer;
+}
+
+.progress-bar-time {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  transition: all 0.3s ease 0s;
+  height: 12px;
+  line-height: 12px;
+  font-size: 11px;
+  opacity: 0.7;
+  top: -4px;
+  margin-bottom: 4px;
+  cursor:default;
+}
+
+.timeline {
+  width: 100%;
+  height: 4px;
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 4px;
+  opacity: .8;
+  bottom: 6px;
+}
+
+.progress {
+  width: 0%;
+  height: 100%;
+  background-color: rgb(255, 255, 255);
+  border-radius: inherit;
+}
 
 .player-controls {
   width: 100%;
@@ -147,20 +184,33 @@ body {
   height: 30px;
 }
 
+.mute-volume {
+  opacity: 0;
+}
+
+.hide-volume {
+  opacity: 0;
+}
+
+.show-volume {
+  opacity: 1;
+}
+
 .volume-slider {
   width: 80px;
-  height: 5px;
+  height: 4px;
   background-color: rgba(255, 255, 255, 0.4);
-  border-radius: 5px;
-  margin: 0 5px;
+  border-radius: 4px;
   opacity: .8;
+  cursor: pointer;
 }
 
 .volume-percentage {
-  width: 75%;
+  width: 100%;
   height: 100%;
   background-color: rgb(255, 255, 255);
   border-radius: inherit;
+  transition: .2s;
 }
 
 .playlist-component {
@@ -170,9 +220,9 @@ body {
 .playlist-container {
   max-height: 360px;
   overflow-y: scroll;
+  scroll-behavior: smooth;
   scrollbar-width: thin;
   scrollbar-color: rgba(255, 255, 255, 0.2) transparent;
-  overflow: hidden;
   transition: .3s;
 }
 
@@ -443,6 +493,11 @@ body {
 .slide-prev {
   left: 340px;
   background-image: url("../assets/svg/slider-prev.svg");
+  z-index: 20;
+}
+
+.close-playlist {
+  left: 20px;
 }
 
 .slide-next {
