feat: add settings

--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -32,10 +32,9 @@ body {
 }
 
 .player {
-  /* height: 480px; */
   width: 256px;
-  /* background-color: rgba(255, 255, 255, 0.2); */
-  z-index: 10;
+  z-index: 1;
+  transition: .3s;
 }
 
 .cover-component {
@@ -264,7 +263,9 @@ body {
   border-radius: 6px;
 }
 
-.item-component:hover .icon-container, .item-component:hover .item-playing svg:nth-child(3) {
+.item-component:hover .icon-container,
+.item-component:hover .item-playing svg:nth-child(3),
+.setting-icon:hover {
   opacity: 1;
 }
 
@@ -302,11 +303,15 @@ body {
   transition: all 0.3s ease 0s;
 }
 
-.item-active, .item-play-icon, .item-playing svg:nth-child(2) {
+.item-active,
+.item-play-icon,
+.item-playing svg:nth-child(2) {
   opacity: 1;
 }
 
-.item-playing-icon, .item-pause-icon, .item-playing svg:nth-child(1) {
+.item-playing-icon,
+.item-pause-icon,
+.item-playing svg:nth-child(1) {
   opacity: 0;
 }
 
@@ -454,6 +459,7 @@ body {
   width: 180px;
   min-height: 180px;  
   text-align: left;
+  transition: .3s;
 }
 
 .icon-temp {
@@ -522,7 +528,7 @@ body {
 .slide-prev {
   left: 300px;
   background-image: url("../assets/svg/slider-prev.svg");
-  z-index: 20;
+  z-index: 2;
 }
 
 .close-playlist {
@@ -539,13 +545,15 @@ body {
   margin-bottom: 10px;
   font-family: 'Arial-MT';
   font-size: 100px;
-  letter-spacing: -4px;  
+  letter-spacing: -4px;
+  transition: .3s;  
 }
 
 .date {
   min-height: 28px;
   font-size: 24px;
   margin-bottom: 20px;
+  transition: .3s;  
 }
 
 .greeting-container {
@@ -556,6 +564,7 @@ body {
   min-height: 48px;
   width: 100vw;
   font-size: 40px;
+  transition: .3s;  
 }
 
 .greeting {
@@ -583,13 +592,16 @@ body {
 
 .footer {
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
+  justify-content: space-between;
+  align-items: flex-end;
   width: 100%;
   height: 30vh;
   min-height: 160px;  
   padding: 20px;
+}
+
+.quote-div {
+  transition: .3s;
 }
 
 .change-quote {
@@ -603,6 +615,113 @@ body {
 
 .author {
   min-height: 20px;
+}
+
+.setting {
+  z-index: 3;
+}
+
+.setting-icon {
+  width: 40px;
+  height: 40px;
+  padding: 10px;
+  opacity: .8;
+  cursor: pointer;
+  transition: .3s;
+}
+
+.toggle {
+  opacity: 1;
+  scale: 1.2;
+  rotate: 45deg;
+}
+
+.setting-wrapper {
+  position: absolute;
+  transition: .3s;
+  left: -280px;
+}
+
+.setting-container {
+  width: 280px;
+  height: 360px;
+  background-color: #fff;
+  position: absolute;
+  bottom: 10px;
+  border-radius: 5px;
+}
+
+.show-settings {
+  left: 20px;
+}
+
+.nipple::after {
+  content: '';
+	width: 0;
+	height: 0;
+	border-left: 7px solid transparent;
+	border-right: 7px solid transparent;
+	border-top: 7px solid #fff;
+  position: absolute;
+  bottom: -7px;
+  left: 13px;
+  transition: .3s;
+}
+
+.settings-list {
+  color: black;
+  margin: 10px;
+  gap: 5px;
+}
+
+.slide-toggle {
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top: solid 1px #4cbf3f;
+  height: 40px;
+}
+
+.checkbox {display: none;}
+
+label {
+	width: 48px;
+	height: 24px;
+	background: grey;
+	display: inline-block;
+	border-radius: 26px;
+	position: relative;
+  cursor: pointer;
+}
+
+label:after {
+	content: '';
+	position: absolute;
+	top: 2px;
+	left: 2px;
+	width: 20px;
+	height: 20px;
+	background: #fff;
+	border-radius: 20px;
+	transition: 0.3s;
+}
+
+input:checked + label {
+	background: #4cbf3f;
+}
+
+input:checked + label:after {
+	left: calc(100% - 2px);
+	transform: translateX(-100%);
+}
+
+.hide {
+  opacity: 0;
+}
+
+.to-do-list {
+  transition: .3s;
 }
 
 @media (max-width: 768px) {
@@ -625,7 +744,3 @@ body {
     padding: 5px;
   }
 }
-/* temp */
-/* .main, .footer {
-  display: none;
-} */
