--- a/codejam/style.css
+++ b/codejam/style.css
@@ -10,6 +10,7 @@ body {
  .ancients-container {
   display:flex;
   flex-wrap:wrap;
+  justify-content: center;
   gap:10px;
   min-width:40%;
   padding:20px
