fix: change basis colour

--- a/codejam/style.css
+++ b/codejam/style.css
@@ -28,13 +28,14 @@ body {
  }
  .ancients-container .ancient-card.active {
   opacity: 1;
-  border: 2px solid greenyellow
+  border: 2px solid rgb(231, 110, 12)
  }
  .selected-ancient {
   background-size:cover;
   height:70vh;
   width:54vh;
   border-radius:2vh;
+  border: 2px solid rgb(231, 110, 12)
  }
  .difficulty-container {
   display: flex;
@@ -42,7 +43,7 @@ body {
   margin: 50px 0;
  }
  .difficulty-container .difficulty {
-  border:2px solid purple;
+  border:2px solid black;
   box-sizing:border-box;
   cursor:pointer;
   padding:5px;
@@ -51,7 +52,7 @@ body {
   background-color: rgba(255, 255, 255, 0.5);
  }
  .difficulty-container .difficulty.active {
-  background-color:greenyellow
+  background-color:rgb(231, 110, 12)
  }
  .deck-container {
   align-items:center;
@@ -79,13 +80,13 @@ body {
   gap:2vh
  }
  .current-state .stage-container .stage-text {
-  border:2px solid purple;
+  border:2px solid black;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 0.5vh;
   padding: 5px;
  }
  .current-state .stage-container .stage-text.done {
-  background-color: greenyellow
+  background-color: rgb(231, 110, 12)
  }
  .current-state .stage-container .dots-container {
   align-items:center;
@@ -95,7 +96,7 @@ body {
  }
  .current-state .stage-container .dot {
   align-items:center;
-  border-radius:50%;
+  border-radius:30%;
   display:flex;
   height:30px;
   justify-content:center;
@@ -123,7 +124,8 @@ body {
   background-size:cover;
   height:60vh;
   width:47.64vh;
-  border-radius:2vh
+  border-radius:2vh;
+  border: 2px solid rgb(231, 110, 12)
  }
  .app {
   background-position:50%;
